--- a/cwiczenie2.html
+++ b/cwiczenie2.html
@@ -7,28 +7,45 @@
   <title>Ćwiczenie 2</title>
 </head>
 <body>
-<h1>Przygody Pchły szachrajki</h1>
-<p><i> Chce­cie baj­ki? Oto baj­ka: </i><br>
-  <em> Była so­bie Pchła Szachrajka. </em><br>
-  <b> Nie­sły­cha­na rzecz po pro­stu, </b><br>
-  <strong> By ktoś tak mar­ne­go wzro­stu </strong><br>
-  I nędz­ne­go pchle­go rodu <br>
-  Mógł wy­czy­niać bez po­wo­du <br>
-  Ta­kie pso­ty i&nbsp;gał­gań­stwa, <br>
-  Jak pchła owa, pro­szę pań­stwa. <br>
-</p>
-<p><pre><code>
-public virtual ActionResult LogOff()
+  <div>
+      <p>Przejdź do ćwiczenia</p>
+          <ul>
+            <li><a href="index.html">Cwiczenie 1</a></li>
+            <li><a href="cwiczenie2.html">Cwiczenie 2</a></li>
+            <li><a href="cwiczenie3.html">Cwiczenie 3</a></li>
+            <li><a href="cwiczenie4.html">Cwiczenie 4</a></li>
+          </ul>    
+      <p>Przejdź do treści strony:</p>
+      <ul>
+        <li><a href="#title">Tytuł</a></li>
+        <li><a href="#lyrics">Wiersz</a></li>
+        <li><a href="#code">Kod</a></li>
+        <li><a href="#equasions">Równanie</a></li>
+        <li><a href="#answers">Odpowiedzi</a></li>
+      </ul>
+  </div>
+<div>
+  <h1 id="title">Przygody Pchły szachrajki</h1>
+    <p id="lyrics"><i> Chce­cie baj­ki? Oto baj­ka:</i><br>
+      <em> Była so­bie Pchła Szachrajka.</em><br>
+      <b> Nie­sły­cha­na rzecz po pro­stu,</b><br>
+      <strong> By ktoś tak mar­ne­go wzro­stu</strong><br>
+      I nędz­ne­go pchle­go rodu<br>
+      Mógł wy­czy­niać bez po­wo­du<br>
+      Ta­kie pso­ty i&nbsp;gał­gań­stwa,<br>
+      Jak pchła owa, pro­szę pań­stwa.<br>
+    </p>
+    <p id="code">
+<pre><code>public virtual ActionResult LogOff()
 {
-    var authenticationManager = System.Web.HttpContext.Current.GetOwinContext().Authentication;
-    authenticationManager.SignOut();
-    if (HttpContext.Request.UrlReferrer != null)
-        return Redirect(HttpContext.Request.UrlReferrer.AbsoluteUri);
+  var authenticationManager = System.Web.HttpContext.Current.GetOwinContext().Authentication;
+  authenticationManager.SignOut();
+  if (HttpContext.Request.UrlReferrer != null)
+      return Redirect(HttpContext.Request.UrlReferrer.AbsoluteUri);
 
-    return RedirectToAction(MVC.Home.Index());
+  return RedirectToAction(MVC.Home.Index());
 }</code></pre>
-<pre><samp>
------- Build started: Project: Database, Configuration: Debug Any CPU ------
+<pre><samp>------ Build started: Project: Database, Configuration: Debug Any CPU ------
 C:\Program Files (x86)\Microsoft Visual Studio\...;
 Loading project references...
 Loading project files...
@@ -36,20 +53,23 @@ Building the project model and resolving object interdependencies...
 Validating the project model...
 Writing model to E:\repos\Database\obj\Debug\Model.xml...
 ...
-========== Build: 1 succeeded or up-to-date, 0 failed, 0 skipped ==========
-</samp></pre></p>
-<p>
-Aby trójkąt był ostrokątny muszą zostać spełnione następujące warunki:<br>
-C<sub>najd</sub> &lt; A<sup>2</sup> + B<sup>2</sup>, gdzie A,B,C<sub>najd</sub> &gt 0
-</p>
-<p><b>Odpowiedzi na pytania:</b></p>
-<ol>
-  <li>Dla kodu <i>em</i> ma dużo większe znaczenie w tekście niż <i>i</i> . Poza samym kodem, ma to duże znaczenie dla indeksowania treści strony przez boty Google. Warto jest w wyróżnionych treściach przemycić tzw. "keywords". Poza tym, możemy chcieć zastosować zupełnie różne stylowania dla tych dwóch tagów.
-  </li>
-  <li>Dla kodu <i>strong</i> ma dużo większe znaczenie w tekście niż <i>b</i> . Poza samym kodem, ma to duże znaczenie dla indeksowania treści strony przez boty Google. Warto jest w wyróżnionych treściach przemycić tzw. "keywords". Poza tym, możemy chcieć zastosować zupełnie różne stylowania dla tych dwóch tagów.
-  </li>
-  <li>Tag <i>code</i> służy do reprezentacji kodu źródłowego, podczas gdy <i>samp</i> służy do reprezentacji wyników działania programu.
-  </li>
-</ol>
+========== Build: 1 succeeded or up-to-date, 0 failed, 0 skipped ==========</samp></pre>
+    </p>
+    <p id="equasion">
+      Aby trójkąt był ostrokątny muszą zostać spełnione następujące warunki:<br>  
+      C<sub>najd</sub> &lt; A<sup>2</sup> + B<sup>2</sup>, gdzie A,B,C<sub>najd</sub> &gt 0
+    </p>
+    <p id="answers"><b>Odpowiedzi na pytania:</b></p>
+      <ol>
+        <li>Dla kodu <i>em</i> ma dużo większe znaczenie w tekście niż <i>i</i> . Poza samym kodem, ma to duże znaczenie dla indeksowania treści strony przez boty Google. Warto jest w wyróżnionych treściach przemycić tzw. "keywords". Poza tym, możemy chcieć zastosować zupełnie różne stylowania dla tych dwóch tagów.
+        </li>
+        <li>Dla kodu <i>strong</i> ma dużo większe znaczenie w tekście niż <i>b</i> . Poza samym kodem, ma to duże znaczenie dla indeksowania treści strony przez boty Google. Warto jest w wyróżnionych treściach przemycić tzw. "keywords". Poza tym, możemy chcieć zastosować zupełnie różne stylowania dla tych dwóch tagów.
+        </li>
+        <li>Tag <i>code</i> służy do reprezentacji kodu źródłowego (input), podczas gdy <i>samp</i> służy do reprezentacji wyników działania programu (output).
+        </li>
+        <li>Efekt wizualny dla użytkownika jest ten sam. Jednakże, moglibyśmy chcieć aby dwa paragrafy miały różne stylowania, wtedy efekt jest już zupełnie inny. Ponad to poprzez użycie osobnych paragrafów informujemy boty google, że zawartość dwóch paragrafów nie musi nawiązywać bezpośrednio do siebie, podczas gdy stworzenie nowej linii mówi im o tym, że jest to kontynuacja dalszej myśli.
+        </li>
+      </ol>
+</div>
 </body>
 </html>
