--- a/cwiczenie2.html
+++ b/cwiczenie2.html
@@ -54,10 +54,10 @@ Validating the project model...
 Writing model to E:\repos\Database\obj\Debug\Model.xml...
 ...
 ========== Build: 1 succeeded or up-to-date, 0 failed, 0 skipped ==========</samp></pre>
-    </p>
+    
     <p id="equasion">
       Aby trójkąt był ostrokątny muszą zostać spełnione następujące warunki:<br>  
-      C<sub>najd</sub> &lt; A<sup>2</sup> + B<sup>2</sup>, gdzie A,B,C<sub>najd</sub> &gt 0
+      C<sub>najd</sub> &lt; A<sup>2</sup> + B<sup>2</sup>, gdzie A,B,C<sub>najd</sub> &gt; 0
     </p>
     <p id="answers"><b>Odpowiedzi na pytania:</b></p>
       <ol>
