--- a/cwiczenie3.html
+++ b/cwiczenie3.html
@@ -82,14 +82,16 @@
               <li>Paprykowe</li>
               <li>Solone</li>              
             </ul>
+          </li>
           <li>Napoje
               <ol>
                 <li>Alkoholowe</li>
-                <li>Gazowane</li>
+                <li>Gazowane
                   <ul>
                     <li>Pepsi</li>
                     <li>Sprite</li>
                   </ul>
+                </li>
                 <li>Niegazowane</li>              
               </ol>          
           </li>
