--- a/cwiczenie2.html
+++ b/cwiczenie2.html
@@ -5,7 +5,7 @@
     <!-- Mobile prepare, viewport is the area of the user's screen, content tells us that the width of the page is the device's width and the content will be pritned with 1.0 scale  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" title="Main" href="styles.css">
-    <link rel="alternate stylesheet" media="screen" title="Alternative" type="text/css" href="alternative.css" />
+    <link rel="alternate stylesheet" media="screen" title="Alternate" type="text/css" href="alternate.css" />
     <link rel="stylesheet" media="print" type="text/css" href="printer.css">
 
     <title>Ćwiczenie 2</title>
@@ -15,14 +15,14 @@
         Wiersz
     </div>
     <div id="pager">
-        <div id="menu">Menu</div>
-        <ul>
+        <span id="menu" class="clearfix">Menu</span>
+        <ul class="inline">
             <li class="list-item-pager"><a href="index.html">Cwiczenie 1</a></li>
             <li class="list-item-pager"><a href="cwiczenie2.html">Cwiczenie 2</a></li>
             <li class="list-item-pager"><a href="cwiczenie3.html">Cwiczenie 3</a></li>
             <li class="list-item-pager"><a href="cwiczenie4.html">Cwiczenie 4</a></li>
         </ul>
-        <ul>
+        <ul class="inline">
             <li class="list-item-pager"><a href="#lyric-title">Tytuł</a></li>
             <li class="list-item-pager"><a href="#lyrics">Wiersz</a></li>
             <li class="list-item-pager"><a href="#code">Kod</a></li>
