--- a/cwiczenie4.html
+++ b/cwiczenie4.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <!-- Mobile prepare, viewport is the area of the user's screen, content tells us that the width of the page is the device's width and the content will be pritned with 1.0 scale  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" title="Main" href="styles.css">
+    <link rel="alternate stylesheet" media="screen" title="Alternate" type="text/css" href="alternate.css" />
     <link rel="stylesheet" media="print" type="text/css" href="printer.css">
-    <link rel="Alternate stylesheet" media="screen" type="text/css" href="alternative.css" />
     <title>Ćwiczenie 4</title>
 </head>
 <body>
@@ -14,14 +14,14 @@
         Zdjecia
     </div>
     <div id="pager">
-        <div id="menu">Menu</div>
-        <ul>
+        <span id="menu" class="clearfix">Menu</span>
+        <ul class="inline">
             <li class="list-item-pager"><a href="index.html">Cwiczenie 1</a></li>
             <li class="list-item-pager"><a href="cwiczenie2.html">Cwiczenie 2</a></li>
             <li class="list-item-pager"><a href="cwiczenie3.html">Cwiczenie 3</a></li>
             <li class="list-item-pager"><a href="cwiczenie4.html">Cwiczenie 4</a></li>
         </ul>
-        <ul>
+        <ul class="inline">
             <li class="list-item-pager"><a href="#header">Nagłówek</a></li>
             <li class="list-item-pager"><a href="#image-first">Zdjęcie pierwsze</a></li>
             <li class="list-item-pager"><a href="#image-second">Zdjęcie drugie</a></li>
