--- a/cwiczenie3.html
+++ b/cwiczenie3.html
@@ -14,7 +14,7 @@
         Tabela i listy
     </div>
     <div id="pager">
-        <span id="menu" class="clearfix">Menu</span>
+        <div id="menu" class="clearfix">Menu</div>
         <ul class="inline">
             <li class="list-item-pager"><a href="index.html">Cwiczenie 1</a></li>
             <li class="list-item-pager"><a href="cwiczenie2.html">Cwiczenie 2</a></li>
