--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li class="list-item-pager"><a href="cwiczenie2.html">Cwiczenie 2</a></li>
             <li class="list-item-pager"><a href="cwiczenie3.html">Cwiczenie 3</a></li>
             <li class="list-item-pager"><a href="cwiczenie4.html">Cwiczenie 4</a></li>
+            <li class="list-item-pager"><a href="php/menu.php">Blog</a></li>
         </ul>
         <ul class="inline">
             <li class="list-item-pager"><a href="#main-header">Nagłówek główny</a></li>
