--- a/cwiczenie2.html
+++ b/cwiczenie2.html
@@ -29,6 +29,12 @@
             <li class="list-item-pager"><a href="#equasions">Równanie</a></li>
             <li class="list-item-pager"><a href="#answers">Odpowiedzi</a></li>
         </ul>
+        <div class="styles">
+            <h2>Wybierz styl</h2>
+            <ul class="js-styles-list">
+                <!-- Tutaj będzie generowana lista styli -->
+            </ul>
+        </div>
     </div>
     <div id="main">
         <h1 id="lyric-title">Przygody Pchły szachrajki</h1>
