--- a/cwiczenie2.html
+++ b/cwiczenie2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" title="Main" href="styles.css">
     <link rel="alternate stylesheet" media="screen" title="Alternate" type="text/css" href="alternate.css" />
-    <link rel="stylesheet" media="print" type="text/css" href="printer.css">
+    <link rel="stylesheet" media="print" title="ForPrint" type="text/css" href="printer.css">
 
     <title>Ćwiczenie 2</title>
 </head>
@@ -33,8 +33,7 @@
     <div id="main">
         <div class="styles">
             <h2>Wybierz styl</h2>
-            <ul class="js-styles-list">
-                <!-- Tutaj będzie generowana lista styli -->
+            <ul class="styles">
             </ul>
         </div>
         <h1 id="lyric-title">Przygody Pchły szachrajki</h1>
