--- a/cwiczenie3.html
+++ b/cwiczenie3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" title="Main" href="styles.css">
     <link rel="alternate stylesheet" media="screen" title="Alternate" type="text/css" href="alternate.css" />
-    <link rel="stylesheet" media="print" type="text/css" href="printer.css">
+    <link rel="stylesheet" media="print" type="text/css" title="ForPrint" href="printer.css">
     <title>Ćwiczenie 3</title>
 </head>
 <body>
